add 多项式拟合